# cross-chain-arb-bot

./: Cargo.toml  README.md
backend/src/: constants.rs  main.rs  simulation_stream.rs  simulation_stream_runner.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ArbitrageTable.tsx
frontend/src/services/: mockData.ts  websocket.ts
frontend/src/types/: arbitrage.ts
frontend/src/utils/: format.ts
src/: component_info.rs  component_state_manager.rs  constants.rs  main.rs  price_reader.rs  simulation_stream_runner.rs  tycho_simulation.rs  util.rs
