[package]
name = "tycho-cross-chain-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.98.1", features = ["evm"] }
tycho-client = "0.66.2"
tycho-common = "0.66.2"
tokio = { version = "1.38.0", features = ["full", "sync"] }
anyhow = "1.0.98"
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
num-bigint = "0.4.6"
alloy-primitives = "1.1.0"
